feat: implement multi-image navigation for auction details
Update Server to serialize image lists instead of sending single images.

Refactor FavouriteController to parse comma-separated image URLs.

Implement next/previous navigation logic in ItemViewController.

Update Item model to support list-based image storage.